    same time, it is still possible to identify their previous
    location using the field in the new EventObject. For people using
    already the change listeners it means one API change that could break
    existing code.

* Bug Fixes:

  - The ASTNode methods insertChild, replaceChild, prependChild have
    been corrected to setup correctly the parentSBMLObject in the added 
    ASTNode tree. Thanks to Jason Stevens who reported the problem.
	       
  - There is now a rounding correction for multipliers when merging units
    that tries to shift multipliers to the scale of a unit. This can only
    be done if the logarithm to the base 10 of the multiplier is nearly
    an integer number. Nearly means that the distance to the next integer
    is not larger than the ensured double precision.

  - [Tracker item #3511439] : The cloning of a Species was not copying the
    speciesType attribute. Thanks to Thomas Bernard who noticed and reported
    the problem.

  - The units attribute on ASTNode was sometimes not written out and the SBML
    namespace was sometimes missing from the MathML. It should be fine now.

  - Improved the registration/un-registration of elements in particular for 
    local parameters.
    
  - Modified the parser to be able to read invalid notes, anything inside 
    the notes element will be read even if not in the html namespace.
    
  - Corrected several other clone methods. The Reaction clone constructor 
    was not cloning the compartment attribute. The Model clone was not 
    cloning the new L3 attributes. The Constraint.clone() was not properly
    cloning the Message. When cloning ASTNodes, the direct pointer to
    referenced variables (instances of CallableSBase) are set to null.
  
  - An other small API change: the species.setBoundaryCondition method was
    expecting a Boolean instead of a boolean, this has been modified. It
    should not break any existing code as the JVM will autocast the Boolean.
    