@@ -18,7 +18,10 @@ Version 0.8 (24-08-2012)
 
   - The ASTNode methods insertChild, replaceChild, prependChild have
     been corrected to setup correctly the parentSBMLObject in the added 
-    ASTNode tree. Thanks to Jason Stevens who reported the problem.
+    ASTNode tree. Thanks to Jason Stevens who reported the problem. 
+  
+  - When creating an ASTNode with a direct pointer to a CallableSBase,
+    no reference to the id of the SBase has been stored.
 	       
   - There is now a rounding correction for multipliers when merging units
     that tries to shift multipliers to the scale of a unit. This can only
